End of game (#31)
* Add end game

* Add fight showing

* Make level provide a defence

* Game saving fixed

* JsonSaver tests added

* BoardTests added

* Removed unnecessary checkers

* Added MobFactory tests

* Styling bugs fixed

* MobFactory tests were added

* Added BuildingController tests

* Fixed Field tests

* Removed unnecessary checking

* Added ContextMenu tests

* FightSystem tests added

* EndGame tests were added

* Small styling fixes

* test fix

* Tests for mobs controller

* Tests for mobs controller

* Change fight info displayed

* Added new sample mobs

* Added new building types

* Change end game info displayed and delete isfree

* Added new mobs types

* Changed json tests

* Changed json file

* Added one very cool mob

* Fix board test

* Some mobs+buildings configuration

* Some mobs+buildings configurations

* Added players' configurations

* GameStateConverter name was changed

* Added one more resource to the general view

* Add end game test

* Add tests

* Added buildings' info

* Added some information to mobs

* Added starting map configuration

* Small buf fixes


Co-authored-by: Andrei Daletski <andrey8daletsky@gmail.com>